Init test unit with junit and mock